--- a/DBMSL.htm
+++ b/DBMSL.htm
@@ -69,6 +69,26 @@
       <td>SQL Queries to delete rows, create view, partition the table,apply aggregate function and retrieve values based on grouping attribute library database.</td>
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/CdMxR_zubfA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
+    <tr>
+      <td>E2 L1</td>
+      <td>Structure of Order database describing entities,attributes and primary keys in each table.</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/xEW0_vfFGds" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>E2 L4</td>
+      <td>Insertion of values into the tables of ORDER database including primary & foreign key values</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/12N7FEYz7LY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>E2 L5</td>
+      <td>SQL Queries to apply aggregate function,delete rows and retrieve values based on grouping attribute into order database.</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/CAwWJGRnXc4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>E2 L6</td>
+      <td>SQL Queries to apply aggregate functions such as count/max, retrieve values based on grouping attribute,creation of view and union operation on order database.</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/WhmQOBissm8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
   </table>
 </body>
 
