--- a/DBMSL.htm
+++ b/DBMSL.htm
@@ -75,6 +75,17 @@
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/xEW0_vfFGds" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
+      <td>E2 L2</td>
+      <td>Schema diagram and Entity relationship diagram of Order database containing cardinality ratio, participation constraints.</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/cneHngpWHqo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>E2 L3</td>
+      <td>Creation and description of tables in order database containing primary keys,foreign keys,on delete cascade/set null,datatypes in each table.
+      </td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/Raqwo2MTHYo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
       <td>E2 L4</td>
       <td>Insertion of values into the tables of ORDER database including primary & foreign key values</td>
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/12N7FEYz7LY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
