--- a/3ECCOA.htm
+++ b/3ECCOA.htm
@@ -4,7 +4,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="responsive.css">
-  <title></title>
+  <title>COA</title>
 
 </head>
 
@@ -12,7 +12,7 @@
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="index.htm">Home</a>
-    <a href="3ESE.htm">3 SEM EC</a>
+    <a href="3EC.htm">3 SEM EC</a>
     <a href="CONTACT.htm">Contact</a>
   </div>
   <script>
@@ -29,8 +29,8 @@
     <button style="font-size:40px;cursor:pointer;color:white;background-color:#b6eb7a;border:none;" onclick="openNav()">☰</button>
   </header>
 
-  <marquee></marquee>
-  <h1>COMPUTER ORGANISATION (18EC35)</h1>
+  <marquee>UPDATED 12/10/2020 10:50AM</marquee>
+  <h1>COMPUTER ORGANISATION (COA).</h1>
   <p><strong>NOTE:</strong> Make the video full screen and do watch</p>
 
   <table>
