--- a/3ECDSD.htm
+++ b/3ECDSD.htm
@@ -12,7 +12,7 @@
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="index.htm">Home</a>
-    <a href="3ESE.htm">3 SEM EC</a>
+    <a href="3EC.htm">3 SEM EC</a>
     <a href="CONTACT.htm">Contact</a>
   </div>
   <script>
@@ -29,8 +29,8 @@
     <button style="font-size:40px;cursor:pointer;color:white;background-color:#b6eb7a;border:none;" onclick="openNav()">☰</button>
   </header>
 
-  <marquee></marquee>
-  <h1>Digital System Design (18EC34)</h1>
+  <marquee>UPDATED 12/10/2020 10:50AM</marquee>
+  <h1>Digital System Design (DSD).</h1>
   <p><strong>NOTE:</strong> Make the video full screen and do watch</p>
 
   <table>
