--- a/index.htm
+++ b/index.htm
@@ -178,7 +178,7 @@
           </tr>
           <tr>
             <td>3.</td>
-            <td><a href="#">3 SEM ECE.</a></td>
+            <td><a href="3EC.htm">3 SEM ECE.</a></td>
           </tr>
 
         </table>
