--- a/3ECCOA.htm
+++ b/3ECCOA.htm
@@ -69,12 +69,12 @@
     <tr>
       <td>M1 L7</td>
       <td>Familiarize with floating point number representation , single precision, overflow and underflow, exceptions. </td>
-      <td><iframe width="310" height="180" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/kUeKTDDWRi4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/kUeKTDDWRi4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td>M1 L8</td>
       <td>Familiarize with memory location and address byte address ability, word alignment, little,big-Endian assignments.</td>
-      <td><iframe width="310" height="180" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/KT8KNA-yIZI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/KT8KNA-yIZI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     </table>
 
