--- a/DBMS.htm
+++ b/DBMS.htm
@@ -29,7 +29,7 @@
       <button style="font-size:40px;cursor:pointer;color:white;background-color:#b6eb7a;border:none;" onclick="openNav()">☰</button>
     </header>
     <br>
-    <marquee>updated 09/10/2020 </marquee>
+    <marquee>updated 13/10/2020 </marquee>
     <br>
   <h2>Database Management System(DBMS)</h2>
   <p><strong>NOTE:</strong> Make the video full screen and do watch</p>
@@ -76,6 +76,11 @@
       <td>M2 L3</td>
       <td>Relational Algebra,Join operations,theta join,equi join,natural join , full outer join ,right and left outer join.</td>
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/sitj9sNz--4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L4</td>
+      <td>Relational Algebra,Division operation, Aggregate functions, Grouping attributes, Generalized Projection.</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/Ol8qAQV87nU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
   </table>
 </body>
