--- a/2DS.htm
+++ b/2DS.htm
@@ -109,6 +109,16 @@
       <td>Tower of Hanoi, Ackerman's function</td>
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/i0akTu-D9cI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
+    <tr>
+      <td>M2 L6</td>
+      <td>Definition, Array Representation, Queue Operations, Circular Queues</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/vAKtmvkEDXQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L7.1</td>
+      <td>Circular queues, Circular queues using Dynamic arrays</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/gfGt197U6do" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
   </table>
 
 </body>
