--- a/2DS.htm
+++ b/2DS.htm
@@ -119,6 +119,16 @@
       <td>Circular queues, Circular queues using Dynamic arrays</td>
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/gfGt197U6do" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
+    <tr>
+      <td></td>
+      <td></td>
+      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td></td>
+      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
   </table>
 
 </body>
