--- a/2DSL.htm
+++ b/2DSL.htm
@@ -64,14 +64,14 @@
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/ZwAa1-2HS6I" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td></td>
-      <td> </td>
-      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td>E5 L2</td>
+      <td>Implementation of program in C to solve tower of hanoi problem. </td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/P_AuGKg2Nic" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td></td>
-      <td></td>
-      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td>E6 L1</td>
+      <td>Implementation of program in C  for Circular QUEUE of Characters</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/ctKmv4-mng0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td></td>
