--- a/2ADEL.htm
+++ b/2ADEL.htm
@@ -51,24 +51,24 @@
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/Fa8wcSknKI4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td>B E4 L4</td>
+      <td>PART B E4 L4</td>
       <td> Basic idea regarding the implementation of Adder and Subtractor circuit usinng basic gates
     </td>
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/uSQ3LMxox4Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td>B E5 L5</td>
+      <td>PART B E5 L5</td>
       <td>Basic idea regarding the implementation of 8:1 MUX using 74151 IC
     </td>
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/GH2SuS-hWVM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td>B E7 L6</td>
+      <td>PART B E7 L6</td>
       <td>Basic idea regarding the design of Binary to Gray and Gray to Binary code converters using basic gates.</td>
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/vO3fa8Dg33o" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td>B E7 L7</td>
+      <td>PART B E7 L7</td>
       <td>Basic idea regarding the Implementation of Binary to Gray and Gray to Binary code converters using basic gates.
     </td>
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/wpoWA3uhsj8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
@@ -79,16 +79,31 @@
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/ePEGs0-LcWA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td>B E4 L9</td>
+      <td>PART B E4 L9</td>
       <td>How to design, implement and simulate Half Adder in VHDL using ModelSim and EDA Playground is demostrated.
     </td>
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/-MiMGLbmdLU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td>B E4 L10</td>
+      <td>PART B E4 L10</td>
       <td>How to design, implement and simulate Half Subtractor, Full Adder and Full Subtractor in VHDL using ModelSim and EDA Playground is demostrated.
     </td>
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/CPAJA8Hw9Z0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>PART B E5 L11</td>
+      <td>How to design, implement and simulate 8 to 1 Multiplexer in VHDL using ModelSim and EDA Playground</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/nDiS7cDKOn4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>PART B E6 L12</td>
+      <td>Realization of JK Master Slave Flipflop using NAND gates.</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/utwO2UyTErg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>PART B E8 L13</td>
+      <td>Design and implementation of Synchronous Mod-5 Upcounter using flipflops.</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/1w6vrrf_60E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td></td>
