--- a/2DMS.htm
+++ b/2DMS.htm
@@ -124,16 +124,36 @@
         <td>Permutation-1  under the concepts of Principles of Counting.</td>
         <td><iframe width="310" height="180" src="https://www.youtube.com/embed/17WGQ7hjfc0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
-      <tr>
+    <tr>
         <td>M2 L6</td>
         <td>Permutation-2  under the concepts of Principles of Counting.</td>
         <td><iframe width="310" height="180" src="https://www.youtube.com/embed/DarGSTr_gtQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
+    <tr>
+        <td>M2 L7</td>
+        <td>Explanation, solving problems on Combinations-1 under the concepts of Principles of Counting.</td>
+        <td><iframe width="310" height="180" src="https://www.youtube.com/embed/Vu859SS2OZM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+        <td>M2 L8</td>
+        <td>Explanation, solving problems on Combinations-2 under the concepts of Principles of Counting.</td>
+        <td><iframe width="310" height="180" src="https://www.youtube.com/embed/xahqrxN8KD4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+        <td>M2 L9</td>
+        <td>Explanation, solving problems on Binomial Theorems under the concepts of Principles of Counting.</td>
+        <td><iframe width="310" height="180" src="https://www.youtube.com/embed/_rzns1yy0-k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+     </tr>
+      <tr>
+        <td>M2 L10</td>
+        <td>Explanation, solving problems on Multinomial Theorems under the concepts of Principles of Counting.</td>
+        <td><iframe width="310" height="180" src="https://www.youtube.com/embed/lAycuQ3yy0Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      </tr>
       <tr>
         <td></td>
         <td></td>
         <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-    </tr>
+      </tr>
   </table>
 
 </body>
