--- a/2SE.htm
+++ b/2SE.htm
@@ -98,6 +98,52 @@
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/7G38UVP8DdY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
+      <td>M2 L3</td>
+      <td>Class model ,state model, interaction model,three model.</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/7G38UVP8DdY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L5</td>
+      <td>Object and class concepts, Class diagram , values and attributes ,classes, operations and methods , link and associations.</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/SQYmjuePLyc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L6</td>
+      <td>Navigation of Class model with example of class model for managing credit card accounts.</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/6lZUsT0xttc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L7</td>
+      <td>Generalization and inheritance, sample class model,object Constraint Language(OCL).</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/EKynYOQIe7Q" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M3 L1</td>
+      <td>System Modeling, different perspective , different types of UML, three ways of graphical models , context model, example of context model.</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/T21tYZ25Jh4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M3 L1.2</td>
+      <td>Interaction Modeling, Use case Modeling,Sequence diagrams,example of use case modeling, tabular description of the usecase modeling example.
+      </td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/941SduVAgLM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M3 L1.3</td>
+      <td>Structural Modeling, Class diagram, Generalization hierarchy, Aggreation with example.</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/1TFP8f3EAwc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td></td>
+      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td></td>
+      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
       <td></td>
       <td></td>
       <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
