--- a/2MAT.htm
+++ b/2MAT.htm
@@ -59,9 +59,44 @@
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/MpJ8lWMZqug" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td> M2 L2</td>
+      <td>M2 L2</td>
       <td>Fourier Series of even and odd functions.</td>
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/cufB3wrCgso" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L3</td>
+      <td>Half range Fourier series</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/lN-RIY5qREc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L4</td>
+      <td>Harmonic Analysis.</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/Bx3aiKV8HlE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M3 L1</td>
+      <td>Concept on Fourier TransformS for continuous time signal and solve problems based on it.</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/lUWPuxnrYjk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M3 L2</td>
+      <td>Analyze the concept on Fourier Sine and Cosine transforms and to solve problems based on it</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/QmKMLKmt0OU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M3 L3</td>
+      <td>Basic theory of Z-transforms which help us to obtain the response or output sequence for discrete system.</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/qM9Vaqsw5iI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M3 L4</td>
+      <td>To find the Inverse Z-transform and to solve difference equations.</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/b3Vwdw044ko" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M3 L4</td>
+      <td>The techniques of solving ordinary differential equations numerically using Taylor's Series and Modified Euler's Method</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/ir1U8sIog78" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
       <td></td>
