--- a/2MAT.htm
+++ b/2MAT.htm
@@ -4,7 +4,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="responsive.css">
-  <title>MAT-3</title>
+  <title>MAT-III</title>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
   </header>
 
   <marquee></marquee>
-  <h1>Engineering Mathematics-3 (MAT).</h1>
+  <h1>Engineering Mathematics (MAT-III).</h1>
   <p><strong>NOTE:</strong> Make the video full screen and do watch</p>
 
   <table>
