--- a/3ECMAT3.htm
+++ b/3ECMAT3.htm
@@ -4,7 +4,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="responsive.css">
-  <title>MAT-|||</title>
+  <title>MAT-III</title>
 
 </head>
 
@@ -30,7 +30,7 @@
   </header>
 
   <marquee>UPDATED 12/10/2020 10:50AM</marquee>
-  <h1>Transform Calculus, Fourier Series and Numerical Techniques (MAT-|||)</h1>
+  <h1>Transform Calculus, Fourier Series and Numerical Techniques (MAT-III)</h1>
   <p><strong>NOTE:</strong> Make the video full screen and do watch</p>
 
   <table>
