--- a/2DS.htm
+++ b/2DS.htm
@@ -29,7 +29,7 @@
     <button style="font-size:40px;cursor:pointer;color:white;background-color:#b6eb7a;border:none;" onclick="openNav()">☰</button>
   </header>
 
-  <marquee>updated 03/10/2020 </marquee>
+  <marquee>UPDATED 13/10/2020 10:50AM</marquee>
   <h1>Data Structure (DS).</h1>
   <p><strong>NOTE:</strong> Make the video full screen and do watch</p>
 
