--- a/2MAT.htm
+++ b/2MAT.htm
@@ -28,7 +28,7 @@
     <button style="font-size:40px;cursor:pointer;color:white;background-color:#b6eb7a;border:none;" onclick="openNav()">☰</button>
   </header>
 
-  <marquee></marquee>
+  <marquee>UPDATED 13/10/2020 10:50AM</marquee>
   <h1>Engineering Mathematics (MAT-III).</h1>
   <p><strong>NOTE:</strong> Make the video full screen and do watch</p>
 
