--- a/2SE.htm
+++ b/2SE.htm
@@ -29,7 +29,7 @@
     <button style="font-size:40px;cursor:pointer;color:white;background-color:#b6eb7a;border:none;" onclick="openNav()">☰</button>
   </header>
 
-  <marquee>DATA AS IN YOUTUBE. ANY QUERY PLEASE CONTACT US.</marquee>
+  <marquee>DATA AS IN YOUTUBE. ANY QUERY PLEASE CONTACT US.UPDATED 13/10/2020 10:50AM</marquee>
   <h1>Software Engineering (SE).</h1>
   <p><strong>NOTE:</strong> Make the video full screen and do watch</p>
 
