--- a/ADP.htm
+++ b/ADP.htm
@@ -29,7 +29,7 @@
   </header>
 
    <br>
-  <marquee>updated 09/10/2020 </marquee>
+  <marquee>UPDATED 13/10/2020 10:50AM</marquee>
   <br>
 
   <h1>Application development using Python (ADP).</h1>
