--- a/CNL.htm
+++ b/CNL.htm
@@ -31,7 +31,7 @@
     </header>
     <br>
 
-    <marquee>updated 09/10/2020 </marquee>
+    <marquee>UPDATED 13/10/2020 10:50AM</marquee>
 
     <br>
 
