--- a/DBMS.htm
+++ b/DBMS.htm
@@ -29,7 +29,7 @@
       <button style="font-size:40px;cursor:pointer;color:white;background-color:#b6eb7a;border:none;" onclick="openNav()">☰</button>
     </header>
     <br>
-    <marquee>updated 13/10/2020 </marquee>
+    <marquee>UPDATED 13/10/2020 10:50AM</marquee>
     <br>
   <h2>Database Management System(DBMS)</h2>
   <p><strong>NOTE:</strong> Make the video full screen and do watch</p>
