--- a/DBMSL.htm
+++ b/DBMSL.htm
@@ -31,7 +31,7 @@
       <button style="font-size:40px;cursor:pointer;color:white;background-color:#b6eb7a;border:none;" onclick="openNav()">☰</button>
     </header>
      <br>
-    <marquee>updated 09/10/2020 </marquee>
+    <marquee>UPDATED 13/10/2020 10:50AM</marquee>
     <br>
 
     <h1>DBMS Laboratory</h1>
