--- a/5CSE.htm
+++ b/5CSE.htm
@@ -125,7 +125,7 @@
           <button style="font-size:40px;cursor:pointer;color:white;background-color:#b6eb7a;border:none;" onclick="openNav()">☰</button>
         </header>
          <br>
-        <marquee>updated 29/09/2020</marquee>
+        <marquee>UPDATED 13/10/2020 10:50AM</marquee>
           <br>
         <script>
           function openNav() {
@@ -136,7 +136,7 @@
             document.getElementById("mySidenav").style.width = "0";
           }
         </script>
-
+        <br>
         <table>
           <tr>
             <th>SR NO</th>
