--- a/UP.htm
+++ b/UP.htm
@@ -91,6 +91,21 @@
       <td>PIPE,Basic and Extended regular expressions,grep,egrep.</td>
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/LajiW_EN43A" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
+    <tr>
+      <td>M2 L5</td>
+      <td>Variable,Read command,command line arguments and exit status.</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/xlXvpBQfuko" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L6</td>
+      <td>Conditional statements,test,set and shift commands.</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/pEdaVvWfyiY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
+    <tr>
+      <td>M2 L5</td>
+      <td>Variable,Read command,command line arguments and exit status.</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/xlXvpBQfuko" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+    </tr>
   </table>
 </body>
 
