--- a/UP.htm
+++ b/UP.htm
@@ -32,7 +32,7 @@
     </header>
 
     <br>
-    <marquee>updated 04/10/2020 </marquee>
+    <marquee>updated 13/10/2020 </marquee>
     <br>
 
     <h1>Unix Programming (UP).</h1>
@@ -102,9 +102,9 @@
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/pEdaVvWfyiY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
     <tr>
-      <td>M2 L5</td>
-      <td>Variable,Read command,command line arguments and exit status.</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/xlXvpBQfuko" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td>M2 L6-1</td>
+      <td>Demonstration on concepts of Lecture-6(M2 L6)</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/bq2-KZPpEJo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
     </tr>
   </table>
 </body>
