--- a/index.htm
+++ b/index.htm
@@ -160,7 +160,7 @@
             <td style="border:none;">
               <h2>WELCOME TO YOUTUBE LEARNING</h2>
             </td>
-            <td style="border:none;"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/7/7c/Canara_Engineering_College_%28logo%29.jpg/300px-Canara_Engineering_College_%28logo%29.jpg" width="150" height="150"></td>
+            <td style="border:none;"><img src="https://www.canaraengineering.in//assets/images/logo.png" width="150" height="150"></td>
           </tr>
         </table>
         <table>
