--- a/index.htm
+++ b/index.htm
@@ -116,6 +116,7 @@
 
         <div id="mySidenav" class="sidenav">
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+          <div><img src="https://www.canaraengineering.in//assets/images/logo.png" width="150" height="150"></div>
           <a href="index.htm">Home</a>
           <a href="2CSE.htm">3 SEM CS</a>
           <a href="5CSE.htm">5 SEM CS</a>
@@ -155,15 +156,10 @@
           document.write("</font></center>");
         </script>
 
-        <table>
-          <tr>
-            <td style="border:none;">
+
               <h2>WELCOME TO YOUTUBE LEARNING</h2>
-            </td>
-            <td style="border:none;"><img src="https://www.canaraengineering.in//assets/images/logo.png" width="150" height="150"></td>
-          </tr>
-        </table>
-        <table>
+
+          <table>
           <tr>
             <th>SR NO</th>
             <th>BRANCH</th>
