--- a/index.htm
+++ b/index.htm
@@ -110,6 +110,9 @@
     background-color: #17706e;
     color: black;
   }
+  h1{
+    text-align: center;
+  }
 </style>
 
 <body>
@@ -157,7 +160,7 @@
         </script>
 
 
-              <h2>WELCOME TO YOUTUBE LEARNING</h2>
+              <h1>WELCOME TO YOUTUBE LEARNING</h1>
 
           <table>
           <tr>
