--- a/index.htm
+++ b/index.htm
@@ -119,7 +119,7 @@
 
         <div id="mySidenav" class="sidenav">
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-          <div><img src="https://www.canaraengineering.in//assets/images/logo.png" width="150" height="150"></div>
+          <div style="text-align: center;"><img src="https://www.canaraengineering.in//assets/images/logo.png" width="150" height="150"></div>
           <a href="index.htm">Home</a>
           <a href="2CSE.htm">3 SEM CS</a>
           <a href="5CSE.htm">5 SEM CS</a>
@@ -158,10 +158,9 @@
           }
           document.write("</font></center>");
         </script>
-
-
+          <br>
               <h1>WELCOME TO YOUTUBE LEARNING</h1>
-
+          <br>
           <table>
           <tr>
             <th>SR NO</th>
