--- a/3ECED.htm
+++ b/3ECED.htm
@@ -104,10 +104,14 @@
 
     </tr>
     <tr>
-      <td>M1 L9</td>
-      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/8XY48xD0rlA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td>M2 L1</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/irojyEcQprE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
       <td>Effect of current because of holes and electron and magnetic fiels inside the semiconductor.</td>
-
+    </tr>
+    <tr>
+      <td>M2 L2</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/KClQzWzIqtk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td>Effect of current because of holes and electron and magnetic fiels inside the semiconductor.</td>
     </tr>
   </table>
 
