--- a/3ECCOA.htm
+++ b/3ECCOA.htm
@@ -78,9 +78,13 @@
     </tr>
     <tr>
       <td>M1 L8</td>
-      
       <td><iframe width="310" height="180" src="https://www.youtube.com/embed/KT8KNA-yIZI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
       <td>Familiarize with memory location and address byte address ability, word alignment, little,big-Endian assignments.</td>
+    </tr>
+    <tr>
+      <td>M1 L9</td>
+      <td><iframe width="310" height="180" src="https://www.youtube.com/embed/Iz-_Q9C5oqE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+      <td>Familiarise with Instruction equencing, Register Transfer Notation ,Branching, Conditional Codes.</td>
     </tr>
     </table>
 
