--- a/2CO.htm
+++ b/2CO.htm
@@ -120,23 +120,28 @@
            <td><iframe width="310" height="180" src="https://www.youtube.com/embed/qeK4x-oYdVA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
            <td>Direct memory access concept which is one of the mechanism to communicate with I/O devices by the processor when large amount of data has to be transferred between memory and I/O device.</td>
           </tr>
-    <tr>
-      <td></td>
-      <td></td>
-      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td></td>
-      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td></td>
-      <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
-    </tr>
-        
-
+          <tr>
+            <td>M2 L6</td>
+            <td><iframe width="310" height="180" src="https://www.youtube.com/embed/XDOt6p7MBZU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+            <td>Bus Arbitration in Direct Memory Access. Two types of Bus Arbitration techniques are explained here with examples. 1. Distributed Bus Arbitration, 2. Centralised Bus Arbitration
+              This video is last part of Direct Memory Access.</td>
+          </tr>
+          <tr>
+            <td>M2 L7</td>
+            <td><iframe width="310" height="180" src="https://www.youtube.com/embed/P_lYvduv6CE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+            <td> Bus and two technique to communicate using bus. That are synchronous and asynchronous bus.
+              Also these techniques are explained using timing diagrams of address, data and control signals.</td>
+          </tr>          
+          <tr>
+            <td></td>
+            <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+            <td></td>
+          </tr>        
+          <tr>
+            <td></td>
+            <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+            <td></td>
+          </tr>
   </table>
 
 </body>
