--- a/2DMS.htm
+++ b/2DMS.htm
@@ -145,14 +145,50 @@
         </tr>
       <tr>
         <td>M2 L10</td>
-        <td>Explanation, solving problems on Multinomial Theorems under the concepts of Principles of Counting.</td>
         <td><iframe width="310" height="180" src="https://www.youtube.com/embed/lAycuQ3yy0Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+        <td>Explanation, solving problems on Multinomial Theorems under the concepts of Principles of Counting.</td>
+      </tr>
+      <tr>
+        <td>M2 L11</td>
+        <td><iframe width="310" height="180" src="https://www.youtube.com/embed/RQH5JnfYStk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+        <td>explanation, solving problems on Combinations with Repetitions-1 under the concepts of Principles of Counting.
+        </td>
+      </tr>
+      <tr>
+        <td>M2 L12</td>
+        <td><iframe width="310" height="180" src="https://www.youtube.com/embed/ZtOwGw6XNA0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+        <td>explanation, solving problems on Combinations with Repetitions-2 under the concepts of Principles of Counting</td>
       </tr>
       <tr>
         <td></td>
+        <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+        <td></td>
+      </tr>
+      <tr>
         <td></td>
         <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+        <td></td>
       </tr>
+      <tr>
+        <td></td>
+        <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td><iframe width="310" height="180" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+        <td></td>
+      </tr>      
   </table>
 
 </body>
